# libmath2

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  TODO.md  test_operators_minimal.cpp
.github/workflows/: ci.yml  sync-wiki.yml
agent/: README.md  modules.yml
agent/modules/: lm2_aabb2.yml  lm2_aabb3.yml  lm2_bezier_curves.yml  lm2_camera2.yml  lm2_camera3.yml  lm2_capsule2.yml  lm2_capsule3.yml  lm2_circle.yml  lm2_constants.yml  lm2_easings.yml  lm2_edge2.yml  lm2_edge3.yml  lm2_hash.yml  lm2_manifold2.yml  lm2_matrix3x2.yml  lm2_matrix3x3.yml  lm2_matrix4x4.yml  lm2_noise.yml  lm2_plane2.yml  lm2_plane3.yml  lm2_polygon.yml  lm2_quaternion.yml  lm2_range2.yml  lm2_range3.yml  lm2_range4.yml  lm2_range_conversions.yml  lm2_raycast2.yml  lm2_raycast3.yml  lm2_safe_ops.yml  lm2_scalar.yml  lm2_shape2.yml  lm2_shape3.yml  lm2_sphere.yml  lm2_triangle2.yml  lm2_triangle2_geometry.yml  lm2_triangle3.yml  lm2_triangle3_geometry.yml  lm2_trigonometry.yml  lm2_vector2.yml  lm2_vector3.yml  (+3 more)
docs/: _config.yml  getting-started.md  index.md
docs/modules/: bezier-curves.md  cameras.md  easings.md  extensions.md  geometry2d.md  geometry3d.md  hash.md  matrices.md  noise.md  quaternions.md  ranges.md  safe-ops.md  scalar.md  trigonometry.md  vector-specifics.md  vectors.md
include/: libmath2.h  lm2.h
include/libmath2/: libmath2_base.h  libmath2_constants.h  libmath2_easings.h  libmath2_generic.h  libmath2_noise.h  libmath2_safe_ops.h  libmath2_scalar.h  libmath2_trigonometry.h  libmath2_vector2.h  libmath2_vector3.h  libmath2_vector4.h  libmath2_vector_defines.h  libmath2_vector_specifics.h
include/lm2/: lm2_base.h  lm2_bezier_curves.h  lm2_constants.h  lm2_easings.h  lm2_edge.h  lm2_hash.h  lm2_noise.h  lm2_range2.h  lm2_range3.h  lm2_range4.h  lm2_rectangle.h  lm2_safe_ops.h  lm2_scalar.h  lm2_triangle.h  lm2_triangle_geometry.h  lm2_trigonometry.h  lm2_vector2.h  lm2_vector3.h  lm2_vector4.h  lm2_vector_defines.h  lm2_vector_operators.h  lm2_vector_specifics.h
include/lm2/camera/: lm2_camera2.h  lm2_camera3.h
include/lm2/extensions/: lm2_c11_generics.h  lm2_cpp_generics.h  lm2_cpp_operators.h  lm2_unprefixed_names.h
include/lm2/geometry/: lm2_capsule.h  lm2_circle.h  lm2_edge.h  lm2_geometry_operators.h  lm2_polygon.h  lm2_raycast.h  lm2_raycast2.h  lm2_rectangle.h  lm2_shape.h  lm2_triangle.h  lm2_triangle_geometry.h
include/lm2/geometry2d/: lm2_aabb2.h  lm2_capsule2.h  lm2_circle.h  lm2_edge.h  lm2_edge2.h  lm2_geometry_operators.h  lm2_manifold2.h  (+12 more)
src/: libmath2.c  libmath2_easings.c  libmath2_noise.c  libmath2_safe_ops.c  libmath2_scalar.c  libmath2_trigonometry.c  libmath2_vector2.c  libmath2_vector3.c  libmath2_vector4.c  libmath2_vector_specifics.c  lm2_bezier_curves.c  lm2_easings.c  lm2_edge.c  lm2_hash.c  lm2_noise.c  lm2_range2.c  lm2_range3.c  lm2_range4.c  lm2_rectangle.c  lm2_safe_ops.c  lm2_scalar.c  lm2_triangle.c  lm2_triangle_geometry.c  lm2_trigonometry.c  lm2_vector2.c  lm2_vector3.c  lm2_vector4.c  lm2_vector_specifics.c
src/camera/: lm2_camera2.c  lm2_camera3.c
src/geometry/: lm2_bezier_curves.c  lm2_capsule.c  lm2_circle.c  lm2_edge.c  lm2_polygon.c  lm2_raycast.c  lm2_raycast2.c  lm2_raycast3.c  lm2_rectangle.c  lm2_shape.c  lm2_triangle.c  lm2_triangle_geometry.c
src/geometry2d/: lm2_aabb2.c  lm2_c2_utils.c  lm2_c2_utils.h  lm2_capsule.c  lm2_capsule2.c  lm2_circle.c  lm2_edge.c  lm2_edge2.c  lm2_manifold2.c  lm2_plane2.c  lm2_polygon.c  lm2_raycast2.c  lm2_rectangle.c  lm2_shape.c  lm2_shape2.c  lm2_triangle.c  lm2_triangle2.c  lm2_triangle2_geometry.c  lm2_triangle_geometry.c
src/geometry3d/: lm2_aabb3.c  lm2_capsule3.c  lm2_cuboid.c  lm2_edge3.c  lm2_plane3.c  lm2_raycast3.c  lm2_shape3.c  lm2_sphere.c  lm2_triangle3.c  lm2_triangle3_geometry.c
src/matrices/: lm2_matrix3x2.c  lm2_matrix3x3.c  lm2_matrix4x4.c
src/misc/: lm2_bezier_curves.c  lm2_easings.c  lm2_hash.c  lm2_noise.c  lm2_quaternion.c
src/ranges/: lm2_range2.c  lm2_range3.c  lm2_range4.c  lm2_range_conversions.c
src/scalar/: lm2_safe_ops.c  lm2_scalar.c  lm2_trigonometry.c
src/vectors/: lm2_vector2.c  lm2_vector3.c  lm2_vector4.c  lm2_vector_conversions.c  lm2_vector_specifics.c
tests/: test_libmath2.cpp
tests/camera/: test_camera2.cpp  test_camera3.cpp
tests/geometry2d/: test_aabb2.cpp  test_capsule2.cpp  test_circle.cpp  test_edge2.cpp  test_manifold2.cpp  test_plane2.cpp  test_polygon.cpp  test_raycast2.cpp  test_shape2.cpp  test_triangle2.cpp  test_triangle2_geometry.cpp
tests/geometry3d/: test_aabb3.cpp  test_capsule3.cpp  test_edge3.cpp  test_plane3.cpp  test_raycast3.cpp  test_shape3.cpp  test_sphere.cpp  test_triangle3.cpp  test_triangle3_geometry.cpp
tests/matrices/: test_matrix3x2.cpp  test_matrix3x3.cpp  test_matrix4x4.cpp
tests/misc/: test_bezier_curves.cpp  test_easings.cpp  test_hash.cpp  test_noise.cpp  test_quaternion.cpp
tests/ranges/: test_range2.cpp  test_range3.cpp  test_range4.cpp  test_range_conversions.cpp
tests/scalar/: test_safe_ops.cpp  test_scalar.cpp  test_trigonometry.cpp
tests/vectors/: test_vector2.cpp  test_vector3.cpp  test_vector4.cpp  test_vector_conversions.cpp  test_vector_specifics.cpp
(+38 files in other folders)
